--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -116,6 +116,10 @@ nav a {
 }
 
 /* main section styles */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
 /* about section styles */
 .about {
     padding: 130px;
@@ -123,3 +127,13 @@ nav a {
     background: #FFF8F3;
     margin: 130px 0px;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+ 
+}
+.about-info{
+    text-align: center;
+}
+
+
