--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -204,3 +204,11 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+
+/* footer style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+}
