--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -173,42 +173,69 @@ main section {
     font-weight: 700;
 
 }
-.resume-container{
+
+.resume-container {
     display: flex;
     gap: 50px;
 }
-.resume-item-title{
-    color: #474747;   
-    font-size: 25px;  
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
     font-weight: 700;
     margin-bottom: 10px;
-   
+
 }
-.resume-item-institute{
+
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
 
 
-.resume-item-institute{
-    color:  #757575;
-}
-
-.resume-item-description{
+.resume-item-institute {
     color: #757575;
 }
-.resume-container hr{
+
+.resume-item-description {
+    color: #757575;
+}
+
+.resume-container hr {
     margin: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
 
 /* footer style */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 230px;
     margin-top: 100px;
 }
+
+.footer-column {
+    width: 50%;
+}
+
+.social-links a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background:  #FFF;
+    border: 0px;
+    width: 100%;
+}
+
